data/derived/comb/progs/unify/prog5542.ml.out
Characters 193-195:
  let (_, res) = List.fold_left fn (0, (0, [])) (List.rev 12) in 
                                                          ^^
Error: This expression has type int but an expression was expected of type
         'a list
